<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            android:text="@string/rest_period" />

        <LinearLayout
            android:id="@+id/list_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/workout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"
                tools:text="Bicep Curls" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/workout_reps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/rep_title"
                    android:layout_toEndOf="@+id/rep_title"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#FFFFFF"
                    android:textSize="21sp"
                    tools:text="12" />

                <TextView
                    android:id="@+id/rep_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rep_count"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/workout_sets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/set_title"
                    android:layout_toEndOf="@+id/set_title"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="7dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#FFFFFF"
                    android:textSize="21sp"
                    tools:text="3" />

                <TextView
                    android:id="@+id/set_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:text="@string/set_count"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/rest_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/rest_period_design"/>

                <TextView
                    android:id="@+id/workout_rest_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="120dp"
                    android:layout_marginEnd="120dp"
                    android:layout_marginTop="2dp"
                    android:textSize="20sp"
                    tools:textSize="20sp"
                    tools:text="30"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="27dp"
                    android:layout_marginEnd="27dp"
                    android:layout_marginTop="2dp"
                    android:textSize="20sp"
                    android:text="@string/rest_period_seconds" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>